--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								</nav>
 								<section>
 									<header class="major">
-										<h2><strong class="fab fa-github"></strong> open-source codes</h2>
+										<h2><strong class="fab fa-github"></strong> Open-source codes</h2>
 									</header>	
 									<div class="mini-posts">
 										<article>
