--- a/molecularsimulationtutorials.html
+++ b/molecularsimulationtutorials.html
@@ -30,7 +30,7 @@
 											<div class="col-4"><span class="image fit"><img src="tutorial1/tutorialelectrolyte.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"></span></div>
 											<div class="col-4"><span class="image fit"></span></div>
-											<div class="col-4"><a href="tutorial1/tutorial1step1.html" class="removelinkdefault"><strong>Tutorial 1: nanoconfined electrolyte</strong><br>System generation and equilibration</a></div>
+											<div class="col-4"><strong><a href="tutorial1/tutorial1step1.html" class="removelinkdefault"><h3>Tutorial 1: nanoconfined electrolyte</h3></a></strong></div>
 											
 										</div>
 									</div>
