--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h2>Simon Gravelle<br/></h2>
-											<p><a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank" class="removelinkdefault">Postdoctoral research assistant <br>
-											Queen Mary University of London</a><br></p>
+											<h1>Simon Gravelle<br/></h1>
+											<h3><a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank" class="removelinkdefault">Postdoctoral research assistant <br>
+											Queen Mary University of London</a><br></h3>
 										</header>
 										<!--<p>I am using molecular and continuum simulations to study adsorption and transport of fluid in nanoporous materials. I am also interested in biomimetics and 2D materials at liquid interfaces.</p>-->
 									</div>
+									<span class="image object loop">
+										<img src="images/animation.gif" alt="animationalternative.jpg" />
+									</span>
 									<!--<span class="image object">
-										<img src="images/animation.gif" alt="" />
-									</span>-->
-									<span class="image object">
 										  <video autoplay loop muted playsinline poster="/images/animationalternative.jpg">
 										  <source src="images/animation.webm" type="video/webm">
 										  <source src="images/animation.mp4" type="video/mp4">
 										</video>
-									</span>
+									</span>-->
 								</section>
 								<section>
 									<header class="major">
