--- a/index.html
+++ b/index.html
@@ -104,12 +104,20 @@
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="publications.html">List of publications</a></li>
 										<li><a href="curriculum.html">Curriculum</a></li>
-										<li><a href="molecularsimulationtutorials.html">Tutorials</a></li>
 									</ul>
 								</nav>
 								<section>
 									<header class="major">
-										<h2><strong class="fab fa-github"></strong> Open-source codes</h2>
+										<h2><a href="molecularsimulationtutorials.html" target="_blank" class="removelinkdefault"><strong class="fas fa-terminal"></strong> &nbsp; Simulation tutorial</h2></a>
+									</header>
+									<div class="mini-posts">
+										<article>
+											<p><a href="molecularsimulationtutorials.html" target="_blank" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
+										</article>
+									</div>
+									
+									<header class="major">
+										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault"><strong class="fab fa-github"></strong> &nbsp; Open-source codes</h2></a>
 									</header>	
 									<div class="mini-posts">
 										<article>
