--- a/tutorial1/tutorial1step3.html
+++ b/tutorial1/tutorial1step3.html
@@ -173,13 +173,47 @@ write_data	data.02.lammps
 									</header>
 									<ul>
 										<li><a href="../index.html">Homepage</a></li>
-										<li><a href="../molecularsimulationtutorials.html">Molecular simulation tutorials</a></li>
-										<li><a href="tutorial1step1.html">Step 1</a></li>
-										<li><a href="tutorial1step2.html">Step 2</a></li>
-										<li><a href="tutorial1step3.html">Step 3</a></li>
-										<li><a href="tutorial1step4.html">Step 4</a></li>
+										<li><a href="../publications.html">List of publications</a></li>
+										<li><a href="../curriculum.html">Curriculum</a></li>
 									</ul>
 								</nav>
+								<section>
+									<header class="major">
+										<h2><a href="../molecularsimulationtutorials.html" target="_blank" class="removelinkdefault"><strong class="fas fa-terminal"></strong> &nbsp; Simulation tutorial</h2></a>
+									</header>
+									<div class="mini-posts">
+										<article>
+											<p><a href="../molecularsimulationtutorials.html" target="_blank" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
+										</article>
+									</div>
+									<header class="major">
+										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault"><strong class="fab fa-github"></strong> &nbsp; Open-source codes</h2></a>
+									</header>	
+									<div class="mini-posts">
+										<article>
+												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
+											<p><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Monte Carlo grand canonique and molecular dynamics simulations with LAMMPS: water molecule in an effectively infinite flexible carbon nanotube.</a></p>
+										</article>
+									</div>
+									<ul class="actions">
+										<li><a href="https://github.com/simongravelle/LAMMPS" class="removelinkdefault" target="_blank"><strong>Find All my codes on Github</strong></a></li>
+									</ul>
+								</section>
+								<section>
+									<header class="major">
+										<h2>Get in touch</h2>
+									</header>
+									<p>Feel free to contact me if you have any questions about my work. </p>
+									<ul class="contact">
+										<li class="icon solid fa-envelope">s.gravelle at qmul.ac.uk</li>
+										<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
+										<li class="icon solid fa-home">Queen Mary University of London <br> Mile End Rd <br> Bethnal Green <br>London E1 4NS</li>
+									</ul>
+								</section>
+								<footer id="footer">
+									<p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								</footer>
+
 						</div>
 					</div>
 			</div>
