--- a/tutorial1/tutorial1step2.html
+++ b/tutorial1/tutorial1step2.html
@@ -217,7 +217,7 @@ From the information printed in the terminal, it is clear that LAMMPS is reading
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="../molecularsimulationtutorials.html" target="_blank" class="removelinkdefault"><strong class="fas fa-terminal"></strong> &nbsp; Simulation tutorial</h2></a>
+										<h2><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
 									</header>
 									<div class="mini-posts">
 										<article>
@@ -225,7 +225,7 @@ From the information printed in the terminal, it is clear that LAMMPS is reading
 										</article>
 									</div>
 									<header class="major">
-										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault"><strong class="fab fa-github"></strong> &nbsp; Open-source codes</h2></a>
+										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
 									</header>	
 									<div class="mini-posts">
 										<article>
