--- a/tutorial1/tutorial1step3.html
+++ b/tutorial1/tutorial1step3.html
@@ -179,7 +179,7 @@ write_data	data.02.lammps
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="../molecularsimulationtutorials.html" target="_blank" class="removelinkdefault"><strong class="fas fa-terminal"></strong> &nbsp; Simulation tutorial</h2></a>
+										<h2><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
 									</header>
 									<div class="mini-posts">
 										<article>
@@ -187,7 +187,7 @@ write_data	data.02.lammps
 										</article>
 									</div>
 									<header class="major">
-										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault"><strong class="fab fa-github"></strong> &nbsp; Open-source codes</h2></a>
+										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
 									</header>	
 									<div class="mini-posts">
 										<article>
