--- a/index.html
+++ b/index.html
@@ -108,16 +108,15 @@
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="molecularsimulationtutorials.html" target="_blank" class="removelinkdefault"><strong class="fas fa-terminal"></strong> &nbsp; Simulation tutorial</h2></a>
+										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
 									</header>
 									<div class="mini-posts">
 										<article>
 											<p><a href="molecularsimulationtutorials.html" target="_blank" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
 										</article>
 									</div>
-									
 									<header class="major">
-										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault"><strong class="fab fa-github"></strong> &nbsp; Open-source codes</h2></a>
+										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
 									</header>	
 									<div class="mini-posts">
 										<article>
