--- a/tutorial1/tutorial1step2.html
+++ b/tutorial1/tutorial1step2.html
@@ -221,7 +221,7 @@ From the information printed in the terminal, it is clear that LAMMPS is reading
 									</header>
 									<div class="mini-posts">
 										<article>
-											<p><a href="../molecularsimulationtutorials.html" target="_blank" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
+											<p><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
 										</article>
 									</div>
 									<header class="major">
