--- a/tutorial1/tutorial1step3.html
+++ b/tutorial1/tutorial1step3.html
@@ -183,7 +183,7 @@ write_data	data.02.lammps
 									</header>
 									<div class="mini-posts">
 										<article>
-											<p><a href="../molecularsimulationtutorials.html" target="_blank" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
+											<p><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
 										</article>
 									</div>
 									<header class="major">
