--- a/curriculum.html
+++ b/curriculum.html
@@ -124,7 +124,7 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<p><a href="molecularsimulationtutorials.html" target="_blank" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
+											<p><a href="molecularsimulationtutorials.html" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
 										</article>
 									</div>
 									<header class="major">
