--- a/tutorial1/tutorial1step3.html
+++ b/tutorial1/tutorial1step3.html
@@ -191,7 +191,7 @@ write_data	data.02.lammps
 									</header>	
 									<div class="mini-posts">
 										<article>
-												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
+												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="../images/waterinCNT.gif" alt="" /></a>
 											<p><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Monte Carlo grand canonique and molecular dynamics simulations with LAMMPS: water molecule in an effectively infinite flexible carbon nanotube.</a></p>
 										</article>
 									</div>
