--- a/tutorial1/tutorial1step2.html
+++ b/tutorial1/tutorial1step2.html
@@ -219,17 +219,15 @@ From the information printed in the terminal, it is clear that LAMMPS is reading
 									<header class="major">
 										<h2><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
 									</header>
-									<div class="mini-posts">
-										<article>
-											<p><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
-										</article>
-									</div>
+									<header class="major">
+										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">Youtube channel</h2></a>
+									</header>
 									<header class="major">
 										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
 									</header>	
 									<div class="mini-posts">
 										<article>
-												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="../images/waterinCNT.gif" alt="" /></a>
+												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
 											<p><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Monte Carlo grand canonique and molecular dynamics simulations with LAMMPS: water molecule in an effectively infinite flexible carbon nanotube.</a></p>
 										</article>
 									</div>
