--- a/publications.html
+++ b/publications.html
@@ -271,11 +271,9 @@
 									<header class="major">
 										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
 									</header>
-									<div class="mini-posts">
-										<article>
-											<p><a href="molecularsimulationtutorials.html" class="removelinkdefault">Find my molecular simulation tutorial (LAMMPS).</a></p>
-										</article>
-									</div>
+									<header class="major">
+										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">Youtube channel</h2></a>
+									</header>
 									<header class="major">
 										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
 									</header>	
