--- a/publications.html
+++ b/publications.html
@@ -269,7 +269,7 @@
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
+										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Tutorials</h2></a>
 									</header>
 									<header class="major">
 										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">Youtube channel</h2></a>
