--- a/molecularsimulationtutorials.html
+++ b/molecularsimulationtutorials.html
@@ -40,8 +40,8 @@
 											<div class="col-4"><span class="image fit"><img src="tutorial1/tutorialelectrolyte_bis.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"><img src="tutorial2/tutorialgraphene.png" alt="" /></span></div>
 											<div class="col-4"><span class="image fit"></span></div>
-											<div class="col-4"><strong><a href="tutorial1/tutorial1step1.html" class="removelinkdefault"><h3>Tutorial 1: nanoconfined electrolyte</h3></a></strong></div>
-											<div class="col-4"><strong><a href="tutorial2/tutorial2step1.html" class="removelinkdefault"><h3>Tutorial 2: graphene under deformation</h3></a></strong></div>
+											<div class="col-4"><strong><a href="tutorial1/tutorial1step1.html" class="removelinkdefault"><h3>Tuto 1 : nanoconfined electrolyte</h3></a></strong></div>
+											<div class="col-4"><strong><a href="tutorial2/tutorial2step1.html" class="removelinkdefault"><h3>Tuto 2 : graphene under deformation</h3></a></strong></div>
 											
 											
 										</div>
@@ -68,7 +68,7 @@
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
+										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Tutorials</h2></a>
 									</header>
 									<header class="major">
 										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">Youtube channel</h2></a>
