--- a/tutorial2/tutorial2step1.html
+++ b/tutorial2/tutorial2step1.html
@@ -32,6 +32,7 @@
 								</header>
 								<section>
 									<header class="major">
+										<h1>Tutorial 2 : Graphene sheet under deformation </h1>
 										<h2>Step 1: generation of the graphene sheet</h2>
 									</header>
 									<strong>In this tutorial, we are going to use molecular dynamics and simulate the deformation of a single layer of graphene. For this tutorial, it is assumed that you already followed tutorial 1. <br><br>
@@ -103,7 +104,7 @@ Close the file and save it in a folder. We are done with the system generation, 
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Simulation tutorial</h2></a>
+										<h2><a href="../molecularsimulationtutorials.html" class="removelinkdefault">Tutorials</h2></a>
 									</header>
 									<header class="major">
 										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">Youtube channel</h2></a>
