--- a/tutorial1/tutorial1step1.html
+++ b/tutorial1/tutorial1step1.html
@@ -108,7 +108,7 @@
 									</header>	
 									<div class="mini-posts">
 										<article>
-												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
+												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="../images/waterinCNT.gif" alt="" /></a>
 											<p><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Monte Carlo grand canonique and molecular dynamics simulations with LAMMPS: water molecule in an effectively infinite flexible carbon nanotube.</a></p>
 										</article>
 									</div>
