--- a/tutorial2/tutorial2step2.html
+++ b/tutorial2/tutorial2step2.html
@@ -35,9 +35,10 @@
 										<h2>Step 2: LAMMPS input script</h2>
 									</header>									
 									<strong>
-									Create a new text file and name it input.lammps. Copy the following lines:
+									Create a new text file and name it "input.lammps". Copy the following lines:
 <code>
 <pre>
+
 # LAMMPS input script
 
 variable	T equal 300
@@ -57,9 +58,14 @@ special_bonds	lj 0.0 0.0 0.5
 read_data	data.lammps
 </pre>
 </code>
-									There are a few differences with tutorial 1. First, the pair style is lj/cut, which means the atoms closer that 14 Angstroms from each others interact through a Lennard-Jones potential. There is no coulombic interaction. The bond, angle, dihedral, and improper style specify the potential. The three numbers of the special bonds command are weighting factors for the Lennard-Jones interaction between atoms connected by bond (respectively directly bounded, separated by two bonds, etc.). Then the read data command open the data.lammps file, which contains the information about the box size, atoms positions, etc. Then we are going to create a force field. Create a new text file and name it PARM.lammps. Copy the following lines:
+									Most of these command lines have been seen already in <a href="../tutorial1/tutorial1step1.html" class="removelinkdefault">tutorial 1</a>, with a few differences: first, the pair style here is lj/cut with parameter 14, which means that the atoms closer than 14 Angstroms from each others interact through a Lennard-Jones potential. Notice that there is no coulombic interaction, because all the atoms in pure graphene have a charge of 0. The bond, angle, dihedral, and improper styles specify the potential, you can refer to the LAMMPS website (see for example the <a href="https://lammps.sandia.gov/doc/dihedral_opls.html" class="removelinkdefault">OPLS dihedral style</a>). The three numbers of the special bonds command are weighting factors for the Lennard-Jones interaction between atoms connected by bond (respectively directly bounded, separated by two bonds, etc.). The first weighting factor, with a value of 0, means that two atoms connected by a bond do not interact through LJ potential. Then the read data command opens the data.lammps file previously generated with VMD, which contains the information about the box size, atoms positions, etc. 
+									
+									<br><br>
+									
+									What we need now is a force field. Create a new text file and name it "PARM.lammps". Copy the following lines in it:
 <code>
 <pre>
+
 pair_coeff 	1 1 0.066047 3.4
 bond_coeff 	1 469 1.4
 angle_coeff 	1 63 120
@@ -70,54 +76,80 @@ improper_coeff	1 5 180
 The pair_coeff indicates the Lennard-jones parameter for the only type of atom of the simulation, carbon. The bond_coeff (respectively angle_coeff, dihedral_coeff, improper_coeff) indicates the energy and equilibrium distance of the only type of bond (respectively angle, dihedral, improper) in the simulation. The file PARM.file can be included in the simulation by adding the following line to input.lammps:
 <code>
 <pre>
+
 include	PARM.lammps					
 </pre>
 </code>
-In order to impose a deformation to the sheet, let us isolate the atoms at the bottom edge, the atoms at the top edge, and the other atoms (in the middle) and put them in separate groups:
+
+The goal of the present simulation is to impose a deformation to the sheet. To do so, we need to define some groups of atoms. Each group will later be associated with a different dynamics. Let us isolate the atoms at the bottom edge (these atoms will be force to move at a given speed) and the atoms at the top edge (these atoms will also be force to move at a given speed). Let us also put the remaining atoms (the one in the middle) in a group. To do so we first define three regions, rtop, rbot, and rmid, corresponding respectively to the three groups :
 <code>
 <pre>
+
 group		gcar type 1
 variable	xmax equal bound(gcar,xmax)-0.5
 variable	xmin equal bound(gcar,xmin)+0.5
 region		rtop block ${xmax} INF INF INF INF INF
 region		rbot block INF ${xmin} INF INF INF INF
 region		rmid block ${xmin} ${xmax} INF INF INF INF
+</pre>
+</code>
+The bound variables (bound(gcar,xmax) and bound(gcar,xmin)) locate the extreme most coordinates along x, therefore the region rtop, that goes from "xmax-0.5" to "INF" along x will contain only one line of carbon atoms. Then groups corresponding to the atoms located in each regions respectively can be defined:
+<code>
+<pre>
+
 group		gtop region rtop
 group		gbot region rbot
 group		gmid region rmid
 </pre>
 </code>
-The gcar group contains all the atoms. The three regions correspond respectively to the edges and the middle, thanks to the bound variables that locate the extreme most coordinates along x. Then groups corresponding to atoms located in each regions respectively are defined. We now choose the thermalisation of the system and the dynamics. Add the following lines to input.lammps.
+When running the simulation, the number of atoms in each group is printed in the terminal, you can control there that you did not make any mistake. 
+
+<br><br>
+
+Let us specify the thermalisation and the dynamics of the system. Add the following lines to input.lammps:
 <code>
 <pre>
+
 velocity	gmid create ${T} 48455 mom yes rot yes
 fix		mynve all nve
-compute	Tmid gmid temp
+compute		Tmid gmid temp
 fix		myber gmid temp/berendsen ${T} ${T} 100
 fix_modify	myber temp Tmid
 </pre>
 </code>
-The velocity create command gives initial velocities to the atoms of the group gmid, assuring an initial temperature of 300K for these atoms. NVE integration is applied to all atoms, and a Berendsen thermostat is applied to the atom of the group gmid only. The reason we are not thermalising the atoms of the edge is because their motion will be restrained by the following commands:
+The "velocity create" command gives initial velocities to the atoms of the group gmid, assuring an initial temperature of 300K for these atoms. NVE integration is applied to all atoms, and a Berendsen thermostat is applied to the atoms of the group gmid only. The "fix modify" ensures that the fix Berendsten use the temperature of the group gmid as an input, instead of the temperature of whole system. We are not thermalising the atoms of the edges because their motion will be restrained.
+
+<br><br>
+
+To restrain the motion of the atoms at the edges, add the following commands:
 <code>
 <pre>
+
 fix 		mysf1 gtop setforce 0 NULL 0
 fix 		mysf2 gbot setforce 0 NULL 0
 velocity	gtop set 0 NULL 0
 velocity	gbot set 0 NULL 0
 </pre>
 </code>
-The setforce commands cancel the force applied on the atoms of both edges during the whole simulation along x and z, and the velocity commands cancel the initial velocities along x and z. Therefore, the atoms of the edge will remain immobile during the simulation (if no other command is applied to them). Let us extract the distance between the two edges as well as the force applied on the edges (the values are extracted before being cancelled by the setforce command). Let us also create a dump file.
+The setforce commands cancel the forces applied on the atoms of both edges during the whole simulation along x and z, and the velocity commands cancel the initial velocities along x and z. Therefore, the atoms of the edges will remain immobile during the simulation (if no other command is applied to them). 
+
+<br><br>
+
+All the important commands have been written. In order to measure the strain and stress in the graphene sheet, let us extract the distance between the two edges as well as the force applied on the edges. Let us also create a dump file containing the trajectories (for VMD).
 <code>
 <pre>
+
 variable	L equal xcm(gtop,x)-xcm(gbot,x)
 fix 		at1 all ave/time 10 100 1000 v_L file length.dat
 fix 		at2 all ave/time 10 100 1000 f_mysf1[1] f_mysf2[1] file force.dat
 dump 		mydmp all atom 1000 dump.lammpstrj
 </pre>
 </code>
-Let us run a small equilibration step.
+
+Notice that the values of the forces on each edge are extracted from the fixes mysf1 and mysf2. This fixes cancel the force on a group of atoms, but allow to extract the values of the force before its cancelation. This is what we are doing here. Let us run a small equilibration step.
 <code>
 <pre>
+
 thermo		100
 thermo_modify 	temp Tmid
 timestep	1.0
@@ -127,6 +159,7 @@ run		5000
 Then, we perform a loop. At each step of the loop, the edge are slightly displaced, and the simulation runs for a short time. 
 <code>
 <pre>
+
 variable 	var loop 10
 label 		loop
 displace_atoms	gtop move 0.1 0 0
@@ -135,6 +168,7 @@ run		1000
 next		var
 jump 		input.lammps loop
 </pre></code>
+
 
 
 									</strong>
@@ -173,7 +207,7 @@ jump 		input.lammps loop
 									</header>	
 									<div class="mini-posts">
 										<article>
-												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
+												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="../images/waterinCNT.gif" alt="" /></a>
 											<p><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Monte Carlo grand canonique and molecular dynamics simulations with LAMMPS: water molecule in an effectively infinite flexible carbon nanotube.</a></p>
 										</article>
 									</div>
