--- a/tutorial2/tutorial2step1.html
+++ b/tutorial2/tutorial2step1.html
@@ -49,7 +49,7 @@
 										<h2>Step 1: generation of the graphene sheet</h2>
 									</header>
 									 <strong>
-									The initial configuration will be generated using VMD. Open VMD, go to extensions, modeling, nanotube builder. A window will open, and from this windows it is possible to generate a sheet of graphene (note that it is also possible to generate a nanotube). For this tutorial, we are going to generate a 4 nm per nm sheet of graphene. Simply change the values of "Edge length along x" and "Edge length along y" to 4 (its in nanometer), and click on "Generate Sheet". You shoud see this:<br> <br>
+									The initial configuration will be generated using VMD. Open VMD, go to extensions, modeling, nanotube builder. A window will open, and from this window it is possible to generate a sheet of graphene (note that it is also possible to generate a nanotube). For this tutorial, we are going to generate a 4 nm per nm sheet of graphene. Simply change the values of "Edge length along x" and "Edge length along y" to 4 (its in nanometer), and click on "Generate Sheet". You shoud see this:<br> <br>
 <a href="#" class="image"><img src="./generatedgraphene.png" alt="" /></a>
 <br> <br>
 At this point, this is not a molecular dynamics simulations, but just a cloud of points that looks like graphene. We are going to export this cloud of points and use it as the initial lammps data file. In the terminal (the one you used to open VMD), enter the following command:
