--- a/tutorial1/tutorial1step2.html
+++ b/tutorial1/tutorial1step2.html
@@ -207,6 +207,7 @@ From the information printed in the terminal, it is clear that LAMMPS is reading
 										<li><a href="tutorial1step2.html" class="page active">2</a></li>
 										<li><a href="tutorial1step3.html" class="page">3</a></li>
 										<li><a href="tutorial1step4.html" class="page">4</a></li>
+										<li><a href="tutorial1step5.html" class="page">5</a></li>
 										<li><a href="tutorial1step3.html" class="button">Next</a></li>
 									</ul>
 									
