--- a/tutorial1/tutorial1step3.html
+++ b/tutorial1/tutorial1step3.html
@@ -169,6 +169,7 @@ write_data	data.02.lammps
 										<li><a href="tutorial1step2.html" class="page">2</a></li>
 										<li><a href="tutorial1step3.html" class="page active">3</a></li>
 										<li><a href="tutorial1step4.html" class="page">4</a></li>
+										<li><a href="tutorial1step5.html" class="page">5</a></li>
 										<li><a href="tutorial1step4.html" class="button">Next</a></li>
 									</ul>
 			
