--- a/tutorial1/tutorial1step4.html
+++ b/tutorial1/tutorial1step4.html
@@ -113,7 +113,8 @@ write_data	data.03.lammps
 										<li><a href="tutorial1step2.html" class="page">2</a></li>
 										<li><a href="tutorial1step3.html" class="page">3</a></li>
 										<li><a href="tutorial1step4.html" class="page active">4</a></li>
-										<li><span class="button disabled">Next</span></li>
+										<li><a href="tutorial1step5.html" class="page">5</a></li>
+										<li><a href="tutorial1step5.html" class="button">Next</a></li>
 									</ul>
 								</section>
 						</div>
