--- a/tutorial1/tutorial1step5.html
+++ b/tutorial1/tutorial1step5.html
@@ -99,8 +99,7 @@ This way, the forces along X applied by the fluid on the top wall (f_mysf1[1]) a
 										
 <h2>Out-of-equilibrium measurement</h2>
 <strong>
-<br><br>
-Out-of-equilibirum measurements consist in applying a force the system, and measuring how the system react to the forcing. With the present system, we can for example apply a force (parallel to the walls) to the fluid. The fluid will acceletate and reach a constant average velocity in the direction of the force. 
+Out-of-equilibirum measurements consist in applying a force (a perturbation) to the system, and measuring how the system reacts to the forcing. With the present system, we can for example apply a force (parallel to the walls) to the fluid. The fluid will acceletate and reach a constant average velocity in the direction of the force. 
 
 <code>
 <pre>
