--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 								</nav>
 								<section>
 									<header class="major">
-										<h2><a href="molecularsimulationtutorials.html" class="removelinkdefault">Tutorials</h2></a>
+										<h2><a href="https://lammpstutorials.github.io/" class="removelinkdefault">My LAMMPS tutorials</h2></a>
 									</header>
 									<header class="major">
-										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">Youtube channel</h2></a>
+										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank class="removelinkdefault">My youtube channel</h2></a>
 									</header>
 									<header class="major">
 										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
