--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 										<h2><a href="https://lammpstutorials.github.io/" target="_blank" class="removelinkdefault">LAMMPS tutorials</h2></a>
 									</header>
 									<header class="major">
-										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank" class="removelinkdefault">>Youtube channel</h2></a>
+										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank" class="removelinkdefault">Youtube channel</h2></a>
 									</header>
 									<header class="major">
 										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
