--- a/publications.html
+++ b/publications.html
@@ -258,9 +258,7 @@
 					<div id="sidebar">
 						<div class="inner">
 								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
+									<h2>Menu</h2>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="publications.html">List of publications</a></li>
@@ -268,33 +266,35 @@
 									</ul>
 								</nav>
 								<section>
-									<header class="major">
-										<h2><a href="https://lammpstutorials.github.io/" target="_blank" class="removelinkdefault">LAMMPS tutorials</h2></a>
-									</header>
-									<header class="major">
-										<h2><a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank" class="removelinkdefault">Youtube channel</h2></a>
-									</header>
-									<header class="major">
-										<h2><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Open-source codes</h2></a>
-									</header>	
+									<a href="https://lammpstutorials.github.io/" target="_blank" class="removelinkdefault">
+									<h2>LAMMPS tutorials</h2>
+									A series of step-by-step tutorials for LAMMPS : molecular dynamics, Monte Carlo, and umbrella sampling simulations.
+									</a>
+									<br><br>
 									<div class="mini-posts">
 										<article>
-												<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
-											<p><a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">Monte Carlo grand canonique and molecular dynamics simulations with LAMMPS: water molecule in an effectively infinite flexible carbon nanotube.</a></p>
+											<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" class="image"><img src="images/waterinCNT.gif" alt="" /></a>
 										</article>
 									</div>
-									<ul class="actions">
-										<li><a href="https://github.com/simongravelle/LAMMPS" class="removelinkdefault" target="_blank"><strong>Find All my codes on Github</strong></a></li>
-									</ul>
+								</section>	
+								<section>
+									<a href="https://www.youtube.com/channel/UCLmK_9wpyLVpcP7BPgN6BIw" target="_blank" class="removelinkdefault">
+									<h2>Youtube channel</h2>
+									Videos presenting my research. <br>
+									Molecular simulations with script.
+									</a>
+								</section>	
+								<section>
+									<a href="https://github.com/simongravelle/LAMMPS/tree/main/WaterInCNT" target="_blank" class="removelinkdefault">
+									<h2>Github</h2>
+									Scripts and input files for molecular simulations, mostly LAMMPS.
+									</a>
 								</section>
 								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
+									<h2>Get in touch</h2>
 									<p>Feel free to contact me if you have any questions about my work. </p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope">s.gravelle at qmul.ac.uk</li>
-										<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
 										<li class="icon solid fa-home">Queen Mary University of London <br> Mile End Rd <br> Bethnal Green <br>London E1 4NS</li>
 									</ul>
 								</section>
