--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,19 @@
 									<div class="table-wrapper">
 										<table>
 											<tbody>
+												
+												
+												<tr>
+													<td>
+													Under review
+													</td>
+													<td>
+														<a href="#" target="_blank" class="removelinkdefault">
+														<strong>Alignment of a Flexible Plate-like Particle in Shear Flow: Effect of Surface Slip and Edges</strong><br>
+														Catherine Kamal, <u>Simon Gravelle</u>, Lorenzo Botto<br>
+														Submitted </a> 
+													</td>
+												</tr>
 												<tr>
 													<td>
 													Under review
