--- a/publications.html
+++ b/publications.html
@@ -68,9 +68,9 @@
 													</td>
 													<td>
 														<a href="#" target="_blank" class="removelinkdefault">
-														<strong>Dynamics of Nanographene in Shear Flow</strong><br>
+														<strong>Violations of Jeffery's theory in the dynamics of nanographene in shear flow</strong><br>
 														<u>Simon Gravelle</u>, Catherine Kamal, Lorenzo Botto<br>
-														Submitted </a> 
+														Accepted for publication by PRF </a> 
 													</td>
 												</tr>
 												<tr>
