--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
 												</tr>
 												<tr>
 													<td>
-													Under review
+													Physical Review Fluids
 													</td>
 													<td>
 														<a href="#" target="_blank" class="removelinkdefault">
