--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<section>
 									<a href="https://lammpstutorials.github.io/" target="_blank" class="removelinkdefault">
 									<h2>LAMMPS tutorials</h2>
-									A series of step-by-step tutorials for LAMMPS : molecular dynamics, Monte Carlo, and umbrella sampling simulations.
+									Step-by-step tutorials for LAMMPS : molecular dynamics, Monte Carlo, and umbrella sampling simulations.
 									</a>
 									<br><br>
 									<div class="mini-posts">
