--- a/publications.html
+++ b/publications.html
@@ -59,7 +59,7 @@
 														<a href="#" target="_blank" class="removelinkdefault">
 														<strong>Effect of hydrodynamic slip on the rotational dynamics of a thin Brownian platelet in shear flow</strong><br>
 														Catherine Kamal, <u>Simon Gravelle</u>, Lorenzo Botto<br>
-														Accepted for publication in JFM </a> 
+														Submitted </a> 
 													</td>
 												</tr>
 												<tr>
