--- a/publications.html
+++ b/publications.html
@@ -67,10 +67,10 @@
 													Physical Review Fluids
 													</td>
 													<td>
-														<a href="#" target="_blank" class="removelinkdefault">
+														<a href="https://journals.aps.org/prfluids/abstract/10.1103/PhysRevFluids.6.034303" target="_blank" class="removelinkdefault">
 														<strong>Violations of Jeffery's theory in the dynamics of nanographene in shear flow</strong><br>
 														<u>Simon Gravelle</u>, Catherine Kamal, Lorenzo Botto<br>
-														Accepted for publication by PRF </a> 
+														Physical Review Fluids, 6 (034303), 2021 </a> 
 													</td>
 												</tr>
 												<tr>
