--- a/curriculum.html
+++ b/curriculum.html
@@ -145,7 +145,7 @@
 									<h2>Get in touch</h2>
 									<p>Feel free to contact me if you have any questions about my work. </p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope">s.gravelle at qmul.ac.uk</li>
+										<li class="icon solid fa-envelope">simon.gravelle at live.fr</li>
 										<li class="icon solid fa-home">Queen Mary University of London <br> Mile End Rd <br> Bethnal Green <br>London E1 4NS</li>
 									</ul>
 								</section>
