--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 										<header>
 											<h1>Simon Gravelle<br/></h1>
 											<h3><a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank" class="removelinkdefault">Postdoctoral research assistant <br>
-											Queen Mary University of London</a><br></h3>
+											Institute for computational physics</a><br></h3>
 										</header>
 										
 										
