--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 									<div class="content">
 										<header>
 											<h1>Simon Gravelle<br/></h1>
-											<h3><a href="https://www.sems.qmul.ac.uk/staff/s.gravelle" target="_blank" class="removelinkdefault">Postdoctoral research assistant <br>
+											<h3><a href="https://www.icp.uni-stuttgart.de/" target="_blank" class="removelinkdefault">Postdoctoral research assistant <br>
 											Institute for computational physics</a><br></h3>
 										</header>
 										
