--- a/publications.html
+++ b/publications.html
@@ -56,10 +56,10 @@
 													Under review
 													</td>
 													<td>
-														<a href="#" target="_blank" class="removelinkdefault">
+														<a href="https://doi.org/10.1017/jfm.2021.327" target="_blank" class="removelinkdefault">
 														<strong>Effect of hydrodynamic slip on the rotational dynamics of a thin Brownian platelet in shear flow</strong><br>
 														Catherine Kamal, <u>Simon Gravelle</u>, Lorenzo Botto<br>
-														Accepted for publication in JFM.</a> 
+														Journal of Fluid Mechanics, 919 , 25, 2021</a> 
 													</td>
 												</tr>
 												<tr>
