--- a/curriculum.html
+++ b/curriculum.html
@@ -40,6 +40,19 @@
 											<tbody>
 												<tr>
 													<td>
+															Since 2021
+													</td>
+													<td>
+															<a href="#" target="_blank" class="removelinkdefault">
+															Postdoctoral Research Assistant<br>
+															Institute for Computational Physics<br>
+															University of Stuttgart, Stuttgart, Deutschland<br>
+															Holm Research Group
+															</a>
+													</td>
+												</tr>
+												<tr>
+													<td>
 															2019-2021
 													</td>
 													<td>
