--- a/publications.html
+++ b/publications.html
@@ -53,7 +53,7 @@
 												</tr>
 												<tr>
 													<td>
-													Under review
+													Journal of Fluid Mechanics
 													</td>
 													<td>
 														<a href="https://doi.org/10.1017/jfm.2021.327" target="_blank" class="removelinkdefault">
