add new publication

--- a/publications.html
+++ b/publications.html
@@ -39,16 +39,27 @@
 										<table>
 											<tbody>
 												
-												
 												<tr>
 													<td>
-													Under review
+													Submitted
+													</td>
+													<td>
+														<a href="#" target="_blank" class="removelinkdefault">
+														<strong>Adsorption of single and multiple graphene
+oxide nanoparticles at a water-vapor interface</strong><br>
+														<u>Simon Gravelle</u> and Lorenzo Botto<br>
+														Submitted</a> 
+													</td>
+												</tr>												
+												<tr>
+													<td>
+													Accepted
 													</td>
 													<td>
 														<a href="#" target="_blank" class="removelinkdefault">
 														<strong>Alignment of a Flexible Plate-like Particle in Shear Flow: Effect of Surface Slip and Edges</strong><br>
 														Catherine Kamal, <u>Simon Gravelle</u>, Lorenzo Botto<br>
-														Submitted </a> 
+														Accepted for publication by PRF </a> 
 													</td>
 												</tr>
 												<tr>
