update publication list

--- a/resume.html
+++ b/resume.html
@@ -29,7 +29,7 @@
 
 			<div id="main">
 				<section id="one">
-					<h2>Curriculum</h2>
+					<h2>Work experience</h2>
 
 						<div class="table-wrapper">
 							<table> <!-- <table class="alt"> or <table> -->
