--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
 										<strong>Adsorption of single and multiple graphene
 oxide nanoparticles at a water-vapor interface</strong><br>
 										<u>Simon Gravelle</u> and Lorenzo Botto<br>
-										Submitted</a> 
+										Accepted for publication by Langmuir.</a> 
 									</td>
 								</tr>												
 								<tr>
