added new link to langmuir publication

--- a/publications.html
+++ b/publications.html
@@ -47,8 +47,7 @@
 									</td>
 									<td>
 										<a href="https://hal.archives-ouvertes.fr/hal-03367712/document" target="_blank" class="removelinkdefault">
-										<strong>Adsorption of single and multiple graphene
-oxide nanoparticles at a water-vapor interface</strong><br>
+										<strong>Adsorption of single and multiple graphene oxide nanoparticles at a water-vapor interface</strong><br>
 										<u>Simon Gravelle</u> and Lorenzo Botto<br>
 										Accepted for publication by Langmuir.</a>  
 									</td>
