upload publication list

--- a/publications.html
+++ b/publications.html
@@ -36,10 +36,21 @@
 
 						<h2>Publications</h2>
 
-						My publication can be divided in fours categories:  <font style="color: var(--nanofluidics-color)">&#9632;</font> nanofluidics, <font style="color:var(--porous-color)">&#9632;</font> porous media flow, <font style="color:var(--cell-color)">&#9632;</font> cell division, and <font style="color:var(--colloid-color)">&#9632;</font> colloidal nanoparticles. <br> <br>
+						My publications can be divided in four categories:  <font style="color: var(--nanofluidics-color)">&#9632;</font> nanofluidics, <font style="color:var(--porous-color)">&#9632;</font> porous media flow, <font style="color:var(--cell-color)">&#9632;</font> cell division, and <font style="color:var(--colloid-color)">&#9632;</font> colloidal nanoparticles. <br> <br>
 
 						<table>
 							<tbody>
+								<tr>
+									<td style="background-color: var(--colloid-color); width: 5px;">
+										
+									</td>
+									<td>
+										<a href="" target="_blank" class="removelinkdefault">
+										<strong>Viscous peeling of a nanosheet</strong><br>
+										Adyant Agrawal, <u>Simon Gravelle</u>, Catherine Kamal, and Lorenzo Botto<br>
+										Submitted.</a>  
+									</td>
+								</tr>									
 								
 								<tr>
 									<td style="background-color: var(--colloid-color); width: 5px;">
