refreshed publication list

--- a/publications.html
+++ b/publications.html
@@ -57,10 +57,10 @@
 										
 									</td>
 									<td>
-										<a href="https://hal.archives-ouvertes.fr/hal-03367712/document" target="_blank" class="removelinkdefault">
+										<a href="https://doi.org/10.1021/acs.langmuir.1c01902" target="_blank" class="removelinkdefault">
 										<strong>Adsorption of single and multiple graphene oxide nanoparticles at a water-vapor interface</strong><br>
 										<u>Simon Gravelle</u> and Lorenzo Botto<br>
-										Accepted for publication by Langmuir.</a>  
+										Langmuir 2021, XXXX, XXX, XXX-XXX</a>  
 									</td>
 								</tr>												
 								<tr>
