--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<section id="two">
 					<h2>About me</h2>
 					<p>I am a computer physicist in soft matter and fluids at interfaces. I am principally using molecular simulations to study the behavior of fluid confined in nanoporous materials. I did my PhD in the liquid at interfaces team at Université de Lyon (France), followed by postdoctoral contracts at the Universidad Adolfo Ibáñez in Viña del Mar (Chile), Queen Mary University of London (UK), and Universität Stuttgart (Germany).</p>
-					<a href="resume.html" class="button">Click here for my full resume</a>
+					<a href="resume.html"><b>Click here for my full resume</b></a>
 				</section>
 
 				<section id="two">
@@ -63,7 +63,7 @@
 								</tbody>
 							</table>
 						</div>
-					<a href="publications.html" class="button">Click here for my full list of publications</a>
+					<a href="publications.html"><b>Click here for my full list of publications</b></a>
 				</section>
 			</div>
 
