--- a/publications.html
+++ b/publications.html
@@ -18,12 +18,18 @@
 	<body class="is-preload">
 			<header id="header">
 				<div class="inner">
-					<a href="index.html" class="image avatar"><img src="images/gravelle.jpg" alt="" /></a>
 					<h1><strong>Simon Gravelle</strong></h1>
+					<a href="index.html" class="image avatar"><img src="images/gravelle.jpg" alt="" /></a>
 					<a href="https://www.icp.uni-stuttgart.de/" target="_blank">
-					<h5>Postdoctoral research assistant<br />
+					<h5><b>Postdoctoral research assistant</b><br />
 					Institute for computational physics<br />
-					Stuttgart<h5></a>
+					Stuttgart, Germany<h5></a>
+					
+					<br><br>
+					<b>Computer physicist</b> <br />
+					Soft matter physics <br /> 
+					Fluids at interfaces <br /> 
+					Molecular simulations
 				</div>
 			</header>
 
